fixing overflow-text in galleryCard

--- a/webapp/src/components/gallery/galleryCard.scss
+++ b/webapp/src/components/gallery/galleryCard.scss
@@ -37,6 +37,7 @@
         margin: 0;
         padding: 5px 10px;
         display: flex;
+        overflow-wrap: anywhere;
         .octo-icon {
             margin-right: 5px;
         }
